mazen-devops-portfolio-dev_new/k8s/terminal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminal-server
  namespace: default
  labels:
    app: terminal-server
spec:
  type: NodePort
  selector:
    app: terminal-server
  ports:
  - name: http
    port: 4000
    targetPort: 4000
    protocol: TCP
    nodePort: 30500
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
